# RuTranscript

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RuTranscript  RuTranscript.py  RuTranscript_example.ipynb  Sounds.py  TextPreprocessing  TextPreprocessing.py  alphabet.txt  example.py  jpt_example.ipynb  paired_c.txt  pyproject.toml  requirements.txt  ru_transcript.py  setup.py  sorted.txt  sorted_allophones.txt  sounds.py  using_.py  using_example.py
Data/: sorted_allophones.txt
Modules/: RuTranscript.py
ru_transcript/data/: error_words_stresses_default.txt
ru_transcript/tools/: allophones_tools.py
scr/: ru_transcript.py
src/: RuTranscript.py  __init__.py  allophones_tools.py  alphabet.txt  irregular_exceptions.xlsx  main_tools.py  paired_consonants.txt  ru_transcript.py  sorted_allophones.txt  sounds.py
src/data/: alphabet.txt  error_words_stresses_default.txt  irregular_exceptions.xlsx  paired_consonants.txt  sorted_allophones.txt
src/ru_transcript/: __init__.py  consts.py  data_models.py  enums.py  ru_transcript.py
src/ru_transcript/data/: irregular_exceptions.xlsx  ts.txt  zh_sh_ts.txt
src/rutranscript/: ru_transcript.py
src/tests/: test_consonants.py  test_modules.py  test_phrases.py  test_stresses.py  test_vowels.py
src/tools/: allophones_tools.py  main_tools.py  sounds.py  stress_tools.py  syntax_tree.py
src/utils/: allophones_tools.py  main_tools.py  sounds.py
temp/ru_transcript/: RuTranscript.py  __init__.py
tests/: __init__.py  example.py  get_info.py  test_consonants.py  test_modules.py  test_phrases.py  test_vowels.py
(+16 files in other folders)
