[tool.poetry]
package-mode = false

[project]
name = 'RuTranscript'
version = '1.0.0'
description = 'A tool for phonetic transcription in russian'
authors = [
    { name = 'Alexandra Badasyan', email = 'sashabadasyan@icloud.com' },
]
readme = 'README.md'

[tool.poetry.dependencies]
python = '3.10.*'
spacy = '3.4.4'
numpy = '1.23.3'
nltk = '3.7'
epitran = '1.24'
openpyxl = '3.1.1'
ru-core-news-sm = { url = 'https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.4.0/ru_core_news_sm-3.4.0-py3-none-any.whl' }

# Git зависимости
tps = { git = 'https://github.com/sovaai/sova-tts-tps.git', tag = 'v1.2.0' }
stressrnn = { git = 'https://github.com/Desklop/StressRNN.git' }
num2t4ru = { git = 'https://github.com/seriyps/ru_number_to_text.git' }

[dependency-groups]
test = ['tqdm==4.67.1']
dev = ['ruff==0.14.0', 'pre-commit==4.3.0', 'tomli==2.0.1', 'build==1.3.0']

[tool.ruff]
line-length = 120
exclude = ['**/tests/**', '**/riva_api/**']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['F', 'E', 'W', 'I', 'N', 'D', 'UP', 'YTT', 'ANN', 'ASYNC', 'S', 'B', 'A', 'COM', 'C4', 'ISC', 'ICN', 'LOG',
    'G', 'INP', 'PIE', 'T20', 'PYI', 'Q', 'RSE', 'RET', 'SLF', 'SIM', 'TID', 'TC', 'INT', 'ARG', 'PTH', 'PD', 'PL',
    'TRY', 'FLY', 'NPY', 'FAST', 'PERF', 'FURB', 'RUF']
ignore = ['D100', 'D104', 'COM812', 'RUF001', 'RUF002', 'RUF003']

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
